# TokenSaver

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: init.rs  main.rs
src/analyzer/: mod.rs  parser.rs  ranker.rs  scanner.rs  search.rs
src/config/: mod.rs
src/context/: mod.rs
src/hook/: input.rs  mod.rs  output.rs
src/llm/: client.rs  mod.rs  prompt.rs  response.rs
src/memory/: changelog.rs  inject.rs  mod.rs  store.rs  tasks.rs
src/tokens/: mod.rs
website/: index.html  package-lock.json  package.json  tailwind.config.js
